Address compilation warnings in libawt with VS2017

XMLWordPrintable

    • b17
    • windows

        There are a number of warnings (treated as errors) when building libawt with VS2017. These should be investigated and addressed. Examples include:

        src/java.desktop/windows/native/libawt/java2d/d3d/D3DPipelineManager.cpp(959): error C2220: warning treated as error - no 'object' file generated
        src/java.desktop/windows/native/libawt/java2d/d3d/D3DPipelineManager.cpp(959): warning C4291: 'void *operator new[](::size_t,const char *,int)': no matching operator delete found; memory will not be freed if initialization throws an exception
        src/java.desktop/windows/native/libawt/windows/awt_Toolkit.cpp(3144): warning C4311: 'type cast': pointer truncation from 'HINSTANCE' to 'int'
        src/java.desktop/windows/native/libawt/windows/awt_Toolkit.cpp(3144): warning C4302: 'type cast': truncation from 'HINSTANCE' to 'int'

              Assignee:
              Sergey Bylokhov
              Reporter:
              Mikael Vidstedt
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: