8202051: Address compilation warnings in libawt with VS2017

Reviewed-by: prr